--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Research and Projects</h2>
-        <p>Explore my research work in the fields of Machine Learning, AI, and Data Science.</p>
+        <p>Explore my research work in the fields of Machine Learning, AI, and Web Development.</p>
       </div><!-- End Section Title -->
       
       <div class="container">
