--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-award"></i></div>
             <div>
               <h4 class="title"><class="stretched-link">Scholar's Award by Delhi Public School</a></h4>
-              <p class="description">Awarded with Scholar's Award and a scholarship by Delhi Public School Ghaziabad for exemplary academic performance (2014-2016)</p>
+              <p class="description">Awarded with <a href="https://drive.google.com/file/d/1QFduVVgVlc3w6aZQYFP3XMoc8jVkltd4/view?usp=drive_link" target="_blank">Scholar's Award</a> and a scholarship by Delhi Public School Ghaziabad for exemplary academic performance (2014-2016)</p>
             </div>
           </div><!-- End Service Item -->
     
@@ -339,7 +339,8 @@
             <div class="icon flex-shrink-0"><i class="bi bi-trophy"></i></div>
             <div>
               <h4 class="title"><class="stretched-link">Duke of Edinburgh's International Award</a></h4>
-              <p class="description">Received the Bronze Award by the Duke of Edinburgh's International Award for Young People in recognition of exceptional personal development and community service (2014)</p>
+              <p class="description">Received the <a href="https://drive.google.com/file/d/1YF6a7mWpQ4ufGfd6Hgf47Z_NHH80U5Zg/view?usp=sharing" target="_blank">Bronze Award</a>
+ by the Duke of Edinburgh's International Award for Young People in recognition of exceptional personal development and community service (2014)</p>
             </div>
           </div><!-- End Service Item -->
     
